[metadata]
description = scared is a side-channel analysis framework.
name = scared
author = eshard
author_email = scared@eshard.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/eshard/scared
project_urls =
  eShard=https://www.eshard.com
  Documentation=https://eshard.gitlab.io/scared
  Issues=https://gitlab.com/eshard/scared/issues
classifiers =
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: Jupyter
  Framework :: IPython
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
  Topic :: Scientific/Engineering
  Topic :: Security
  Topic :: Software Development
  Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8.0,<3.13
install_requires =
  numba
  numpy >=1.20.3
  estraces >=1.9.4
  psutil
  scipy
test_suite = tests

[options.extras_require]
test =
  pytest
  pytest-cov
  pycryptodome
  pydocstyle<4
  flake8
  pep8-naming
  flake8-docstrings

[options.packages.find]
exclude =
    tests

[versioneer]
VCS = git
style = pep440
versionfile_source = scared/_version.py
versionfile_build = scared/_version.py
tag_prefix =
parentdir_prefix = scared-