[flake8]
max-line-length = 100
ignore = E122,E123,E126,E127,E128,E731,E722
exclude = build,scared/_version.py,tests,.recipe,.git,versioneer.py,benchmarks,.asv

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.eshard.com

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9.0


[tool:pytest]
norecursedirs= .* *.egg* build dist conda.recipe
addopts =
    --junitxml=junit.xml
    --ignore setup.py
    --ignore run_test.py
    --cov-report term-missing
    --tb native
    --strict-markers
    --durations=20
markers =
    serial: execute test serially (to avoid race conditions)

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pycryptodome
    pytest-mock

[versioneer]
VCS = git
style = pep440
versionfile_source = scared/_version.py
versionfile_build = scared/_version.py
tag_prefix =
parentdir_prefix = scared-
